Kinda fix overflow, but not really

--- a/static/css/posts/posts.css
+++ b/static/css/posts/posts.css
@@ -2,6 +2,8 @@
 	border-radius: var(--roundedness);
 	padding: var(--roundedness);
 	background: var(--accent-color);
+	max-height: 170px;
+	overflow: hidden;
 }
 
 .post__decoration, .post__content {
@@ -30,6 +32,7 @@
 	display: inline-grid;
 	vertical-align: middle;
 	float: right;
+	overflow: hidden;
 }
 .post-info__delete * {
 	margin: 16px;
